--- a/views/search/index.njk
+++ b/views/search/index.njk
@@ -68,19 +68,24 @@
           selected: statusSelect === "new"
         },
         {
-          value: "opened",
-          text: t('common.status.opened'),
-          selected: statusSelect === "opened"
+          value: "pending",
+          text: t('common.status.pending'),
+          selected: statusSelect === "pending"
         },
         {
-          value: "accepted",
-          text: t('common.status.accepted'),
-          selected: statusSelect === "accepted"
+          value: "advising",
+          text: t('common.status.advising'),
+          selected: statusSelect === "advising"
         },
         {
           value: "closed",
           text: t('common.status.closed'),
           selected: statusSelect === "closed"
+        },
+        {
+          value: "completed",
+          text: t('common.status.completed'),
+          selected: statusSelect === "completed"
         }
       ]
     }) }}
