--- a/views/search/index.njk
+++ b/views/search/index.njk
@@ -68,17 +68,17 @@
           selected: statusSelect === "new"
         },
         {
-          value: "pending",
+          value: "opened",
           text: t('common.status.pending'),
           selected: statusSelect === "pending"
         },
         {
-          value: "advising",
+          value: "accepted",
           text: t('common.status.advising'),
           selected: statusSelect === "advising"
         },
         {
-          value: "closed",
+          value: "rejected",
           text: t('common.status.closed'),
           selected: statusSelect === "closed"
         },
