EL-2763: Update 'Your cases' page with new states (#366)
If applied:
- this updates 'Your cases' page and adds a new state.
- renames dictionary and keeps it DRY
- updates the param fields we can filter by

It also:
- updates eslint config to satisfy linter
- updates the tests
- updates the node version
- update yarn.lock file
- updates how we call the cases partial. It slims down to the use of 1 partial, setting other values conditionally based on `caseType`

--- a/views/case_details/index.njk
+++ b/views/case_details/index.njk
@@ -4,10 +4,19 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "components/tabComponent.njk" import tabComponent %}
 
+{# TO-DO Adding this in temporarily, will be resolved in EL-2754 #}
+{% set caseStatusToStates = {
+  "new": "new",
+  "opened": "pending",
+  "accepted": "advising",
+  "rejected": "closed",
+  "closed": "completed"
+} %}
+
 {% block backLink %}
   {{ govukBackLink({
     text: t('common.backToAllCases'),
-    href: "/cases/" + (client.caseStatus | lower),
+    href: "/cases/" + caseStatusToStates[client.caseStatus | lower],
     classes: "govuk-!-margin-bottom-0"
   }) }}
 {% endblock %}
