EL-2786: Include character limit on support needs notes (#367)
If applied:
- this adds a character limit on support needs notes box
- adds a CHARACTER_THRESHOLD constant

--- a/views/case_details/client_support_needs/_form.njk
+++ b/views/case_details/client_support_needs/_form.njk
@@ -32,7 +32,7 @@
   {% endset -%}
 
   {% set notes %}
-    {{ govukTextarea({
+    {{ govukCharacterCount({
       label: {
         text: t('forms.clientDetails.clientSupportNeeds.notesTextAreaHint')
       },
@@ -40,7 +40,8 @@
       name: "notes",
       value: currentNotes,
       errorMessage: errorMessages.notes if error,
-      autocomplete: "off"
+      autocomplete: "off",
+      maxlength: 255
     }) }}
   {% endset -%}
 
