If applied, this addresses UAT comment about UI element not remembering selection

--- a/views/search/index.njk
+++ b/views/search/index.njk
@@ -68,17 +68,17 @@
           selected: statusSelect === "new"
         },
         {
-          value: "opened",
+          value: "pending",
           text: t('common.status.pending'),
           selected: statusSelect === "pending"
         },
         {
-          value: "accepted",
+          value: "advising",
           text: t('common.status.advising'),
           selected: statusSelect === "advising"
         },
         {
-          value: "rejected",
+          value: "closed",
           text: t('common.status.closed'),
           selected: statusSelect === "closed"
         },
