--- a/views/case_details/index.njk
+++ b/views/case_details/index.njk
@@ -22,7 +22,7 @@
 {% endblock %}
 
 {% block pageContent %}
-
+  {% include "case_details/_case-alert-banner-partial.njk" %}
   {% include "case_details/_case-info-partial.njk" %}
 
   {{ tabComponent({
