Adds state notes to pending banner

--- a/views/case_details/_case-alert-banner-partial.njk
+++ b/views/case_details/_case-alert-banner-partial.njk
@@ -25,6 +25,6 @@
       title: "Case pending",
       showTitleAsHeading: true,
       dismissible: false,
-      html: "Not ready for determination<p>" + client.provider_viewed + "</p>"
+      html: client.state_note + "<p>" + client.provider_viewed + "</p>"
     }) }}
 {% endif %}
