--- a/views/base.njk
+++ b/views/base.njk
@@ -11,6 +11,9 @@
   <meta name="description" content="{{config.SERVICE_NAME}}">
   <meta name="keywords" content="GOV.UK, govuk, gov, government, uk, frontend, ui, user interface, jinja, python, flask, port, template, templating, macro, component, design system, html, forms, wtf, wtforms, widget, widgets, demo, example">
   <meta name="author" content="{{config.DEPARTMENT_NAME}}">
+  {% if csrfToken %}
+  <meta name="csrf-token" content="{{ csrfToken }}">
+  {% endif %}
   <script type="module" nonce="{{ cspNonce }}" src="/js/{{getAsset('custom','min.js')}}"></script>
 {% endblock %}
 
