--- a/views/case_details/_case-info-partial.njk
+++ b/views/case_details/_case-info-partial.njk
@@ -68,14 +68,21 @@
       classes: 'govuk-visually-hidden'
     }
   ] %}
-{% elif currentStatus in["closed", "completed"] %}
+{% elif currentStatus == "completed" %}
   {% set menuItems = [
     {
       text: t('pages.caseDetails.buttons.actions.advising'),
-      href: "/cases/" + client.caseReference + "/accept",
-      attributes: {
-        "data-method": "post"
-      }
+      href: "/cases/" + client.caseReference + "/why-reopen"
+    }, {
+      text: '',
+      classes: 'govuk-visually-hidden'
+    }
+  ] %}
+  {% elif currentStatus == "closed" %}
+  {% set menuItems = [
+    {
+      text: t('pages.caseDetails.buttons.actions.advising'),
+      href: "/cases/" + client.caseReference + "/why-reopen"
     }, {
       text: '',
       classes: 'govuk-visually-hidden'
