Adds Global header component

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,8 +9,8 @@
 @use "components/search";
 
 // Custom styles
-.govuk-main-wrapper {
-  padding-top: 0px !important;
+.mcc-case-details-header {
+  margin-top: -40px;
 }
 .moj-button-menu__wrapper {
   margin-top: -5px !important;
