--- a/views/case_details/_case-info-partial.njk
+++ b/views/case_details/_case-info-partial.njk
@@ -1,3 +1,4 @@
+{% from "govuk/components/tag/macro.njk" import govukTag %}
 {%- from "moj/components/button-menu/macro.njk" import mojButtonMenu -%}
 {% set statusConfig = {
   "new": {
@@ -22,7 +23,7 @@
   }
 } %}
 
-{% set currentStatus = caseStatusToStates[client.caseStatus | lower] %}
+{% set currentStatus = client.caseStatus %}
 
 {# Case state change button logic #}
 {% if currentStatus == "new" %}
