--- a/views/case_details/client_support_needs/_base-client-support-needs.njk
+++ b/views/case_details/client_support_needs/_base-client-support-needs.njk
@@ -1,7 +1,6 @@
-{% extends "base.njk" %}
+{% extends "case_details/_base-case-change.njk" %}
 
 {% from "govuk/components/input/macro.njk" import govukInput %}
-{% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "components/errorSummaryComponent.njk" import errorSummary %}
 {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
@@ -11,17 +10,7 @@
 {% block pageTitle %}{{ t(pageTitleKey, { caseReference: caseReference, serviceName: config.SERVICE_NAME }) }}
 {% endblock %}
 
-{% set backLinkHref = "/cases/" + caseReference + "/client-details" %}
-
-{% block backLink %}
-  {{ govukBackLink({
-      text: t('common.back'),
-      href: backLinkHref,
-      classes: "govuk-!-margin-bottom-0"
-    }) }}
-{% endblock %}
-
-{% block pageContent %}
+{% block formContent %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">{{ t(headingKey) }}</h1>
@@ -67,4 +56,4 @@
       clearAccessibleAutocompleteSelectionWhenInputEmpty('languageSupportNeeds');
     });
   </script>
-{% endblock %}
+{% endblock formContent %}
