--- a/views/case_details/third_party_details/_base-third-party.njk
+++ b/views/case_details/third_party_details/_base-third-party.njk
@@ -1,7 +1,6 @@
-{% extends "base.njk" %}
+{% extends "case_details/_base-case-change.njk" %}
 
 {% from "govuk/components/input/macro.njk" import govukInput %}
-{% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "components/errorSummaryComponent.njk" import errorSummary %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
@@ -10,17 +9,7 @@
 {% block pageTitle %}{{ t(pageTitleKey, { caseReference: caseReference, serviceName: config.SERVICE_NAME }) }}
 {% endblock %}
 
-{% set backLinkHref = "/cases/" + caseReference + "/client-details" %}
-
-{% block backLink %}
-  {{ govukBackLink({
-      text: t('common.back'),
-      href: backLinkHref,
-      classes: "govuk-!-margin-bottom-0"
-    }) }}
-{% endblock %}
-
-{% block pageContent %}
+{% block formContent %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">{{ t(headingKey) }}</h1>
@@ -32,4 +21,4 @@
       {% include "case_details/third_party_details/_form.njk" %}
     </div>
   </div>
-{% endblock %}
+{% endblock formContent %}
