--- a/views/case_details/why-reopen.njk
+++ b/views/case_details/why-reopen.njk
@@ -1,19 +1,11 @@
-{% extends "base.njk" %}
+{% extends "case_details/_base-case-change.njk" %}
 {% from "govuk/components/character-count/macro.njk" import govukCharacterCount %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
-{% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "components/errorSummaryComponent.njk" import errorSummary %}
 
 {% block pageTitle %}{{ t('pages.caseDetails.reopenCase.title') }} - {{ serviceName }} - GOV.UK{% endblock %}
 
-{% block beforeContent %}
-  {{ govukBackLink({
-    text: t('common.back'),
-    href: "/cases/" + caseReference + "/client-details"
-  }) }}
-{% endblock %}
-
-{% block content %}
+{% block formContent %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       {% if error %}
