EL-2764 change state to closed inc. reason

--- a/views/case_details/_case-info-partial.njk
+++ b/views/case_details/_case-info-partial.njk
@@ -39,7 +39,7 @@
       href: "#"
     }, {
       text: t('pages.caseDetails.buttons.actions.closed'),
-      href: "#"
+      href: "/cases/" + client.caseReference + "/why-closed"
     }
   ] %}
 {% elif currentStatus == "pending" %}
@@ -52,7 +52,7 @@
       }
     }, {
       text: t('pages.caseDetails.buttons.actions.closed'),
-      href: "#"
+      href: "/cases/" + client.caseReference + "/why-closed"
     }
   ] %}
 {% elif currentStatus == "advising" %}
