Changes route name from close to completed

--- a/views/case_details/_case-info-partial.njk
+++ b/views/case_details/_case-info-partial.njk
@@ -60,7 +60,7 @@
   {% set menuItems = [
     {
       text: t('pages.caseDetails.buttons.actions.completed'),
-      href: "/cases/" + client.caseReference + "/close",
+      href: "/cases/" + client.caseReference + "/completed",
       attributes: {
         "data-method": "post"
       }
