If applied, hides the change state button when entering change form on client details

--- a/views/case_details/_base-case-change.njk
+++ b/views/case_details/_base-case-change.njk
@@ -15,7 +15,7 @@
 {% endblock %}
 
 {% block pageContent %}
-  {{ caseDetailsHeaderComponent(client) }}
+  {{ caseDetailsHeaderComponent(client, hideStatusButton = true) }}
   
   {% block formContent %}
     {# Child templates override this block with their specific form content #}
