--- a/views/components/caseDetailsHeaderComponent.njk
+++ b/views/components/caseDetailsHeaderComponent.njk
@@ -1,4 +1,4 @@
-{% macro caseDetailsHeaderComponent(client) %}
+{% macro caseDetailsHeaderComponent(client, hideStatusButton = false) %}
   <div class="mcc-case-details-header">
     {% include "case_details/_case-alert-banner-partial.njk" %}
     {% include "case_details/_case-info-partial.njk" %}
