EL-2754/EL-2778: Updates case details header and adds button menu & banner (#379)
If applied:
* Updates header and adds button menu
* Adds Banner for case details
* Adds state notes to pending banner
* Adds Global header component
* Adds styles, updates layouts and creates a new yarn lock file
* Fixes existing mocha unit tests & playwright tests, to match the new UI
* Makes another api call so that we can show details on case info partial
* Hides the change state button when entering change form on client details

---------

Co-authored-by: Masum Khan <masum.khan@digital.justice.gov.uk>

--- a/views/case_details/index.njk
+++ b/views/case_details/index.njk
@@ -1,32 +1,19 @@
 {% extends "base.njk" %}
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
-{% from "govuk/components/tag/macro.njk" import govukTag %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "components/tabComponent.njk" import tabComponent %}
-
-{# TO-DO Adding this in temporarily, will be resolved in EL-2754 #}
-{% set caseStatusToStates = {
-  "new": "new",
-  "opened": "pending",
-  "accepted": "advising",
-  "rejected": "closed",
-  "closed": "completed"
-} %}
+{% from "components/caseDetailsHeaderComponent.njk" import caseDetailsHeaderComponent %}
 
 {% block backLink %}
   {{ govukBackLink({
     text: t('common.backToAllCases'),
-    href: "/cases/" + caseStatusToStates[client.caseStatus | lower],
-    classes: "govuk-!-margin-bottom-0"
+    href: "/cases/" + client.caseStatus,
+    classes: "govuk-!-margin-bottom-2"
   }) }}
 {% endblock %}
 
 {% block pageContent %}
-  <h1 class="govuk-caption-xl">{{ client.caseReference }}</h1>
-  <h1 class="govuk-heading-xl govuk-!-margin-bottom-6" id="page-heading">{{ client.fullName }}</h1>
-
-  {% include "case_details/_case-info-partial.njk" %}
-
+  {{ caseDetailsHeaderComponent(client) }}
   {{ tabComponent({
     activeTab: activeTab,
     containerId: "cases-tab-container",
