--- a/views/case_details/_case-info-partial.njk
+++ b/views/case_details/_case-info-partial.njk
@@ -1,88 +1,116 @@
+{% from "govuk/components/tag/macro.njk" import govukTag %}
+{%- from "moj/components/button-menu/macro.njk" import mojButtonMenu -%}
+
 {% set statusConfig = {
   "new": {
     text: t('common.status.new'),
-    classes: "govuk-tag--green govuk-!-margin-bottom-2"
+    classes: "govuk-tag--green govuk-!-margin-bottom-2 tag-padding"
   },
   "pending": {
     text: t('common.status.pending'),
-    classes: "govuk-tag--blue govuk-!-margin-bottom-2"
+    classes: "govuk-tag--blue govuk-!-margin-bottom-2 tag-padding"
   },
   "advising": {
     text: t('common.status.advising'),
-    classes: "govuk-tag--light-blue govuk-!-margin-bottom-2"
+    classes: "govuk-tag--light-blue govuk-!-margin-bottom-2 tag-padding"
   },
   "closed": {
     text: t('common.status.closed'),
-    classes: "govuk-tag--grey govuk-!-margin-bottom-2"
+    classes: "govuk-tag--grey govuk-!-margin-bottom-2 tag-padding"
   },
   "completed": {
     text: t('common.status.completed'),
-    classes: "govuk-tag--pink govuk-!-margin-bottom-2"
+    classes: "govuk-tag--pink govuk-!-margin-bottom-2 tag-padding"
   }
 } %}
 
-{% set currentStatus = caseStatusToStates[client.caseStatus | lower] %}
+{% set currentStatus = client.caseStatus %}
 
-{{ govukTag({
-  text: statusConfig[currentStatus].text,
-  classes: statusConfig[currentStatus].classes
-}) }}
+{# Case state change button logic #}
+{% if currentStatus == "new" %}
+  {% set menuItems = [
+    {
+      text: t('pages.caseDetails.buttons.actions.advising'),
+      href: "#"
+    }, {
+      text: t('pages.caseDetails.buttons.actions.pending'),
+      href: "#"
+    }, {
+      text: t('pages.caseDetails.buttons.actions.closed'),
+      href: "#"
+    }
+  ] %}
+{% elif currentStatus == "pending" %}
+  {% set menuItems = [
+    {
+      text: t('pages.caseDetails.buttons.actions.advising'),
+      href: "#"
+    }, {
+      text: t('pages.caseDetails.buttons.actions.closed'),
+      href: "#"
+    }
+  ] %}
+{% elif currentStatus == "advising" %}
+  {# Empty hidden menu item to fix the issue: MOJ Button Menu component hides the dropdown when there's only one item #}
+  {% set menuItems = [
+    {
+      text: t('pages.caseDetails.buttons.actions.completed'),
+      href: "#"
+    }, {
+      text: '',
+      classes: 'govuk-visually-hidden'
+    }
+  ] %}
+{% elif currentStatus in["closed", "completed"] %}
+  {% set menuItems = [
+    {
+      text: t('pages.caseDetails.buttons.actions.advising'),
+      href: "#"
+    }, {
+      text: '',
+      classes: 'govuk-visually-hidden'
+    }
+  ] %}
+{% endif %}
 
-<h2 class="govuk-heading-m govuk-!-margin-bottom-1">{{ t('pages.caseDetails.dateReceived') }} <span class="govuk-body-l">{{ client.provider_assigned_at | formatDate }}</span></h2>
-<h2 class="govuk-heading-m govuk-!-margin-bottom-7">{{ t('pages.caseDetails.laaReference') }} <span class="govuk-body-l">{{ client.laaReference or t('pages.caseDetails.notProvided') }}</span></h2>
+<hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible govuk-!-margin-bottom-6"/>
+<div class="govuk-!-display-block">
+  {# Name and case reference #}
+  <div class="govuk-!-display-inline-block govuk-!-static-padding-right-6">
+    <h2 class="govuk-heading-s govuk-!-margin-bottom-2">{{ client.fullName }}</h2>
+    <p class="govuk-body">{{ client.caseReference }}</p>
+  </div>
+  {# Date received #}
+  <div class="govuk-!-display-inline-block govuk-!-static-padding-right-6">
+    <h2 class="govuk-heading-s govuk-!-margin-bottom-2">{{ t('pages.caseDetails.dateReceived') }}</h2>
+    <p class="govuk-body">{{ client.provider_assigned_at | formatDate }}</p>
+  </div>
+  {# LAA reference #}
+  <div class="govuk-!-display-inline-block">
+    <h2 class="govuk-heading-s govuk-!-margin-bottom-2">{{ t('pages.caseDetails.laaReference') }}</h2>
+    <p class="govuk-body">{{ client.laaReference }}</p>
+  </div>
+</div>
 
-<div class="govuk-button-group">
-  {% if currentStatus in ["new", "pending"] %}
-    {{ govukButton({
-      text: t('pages.caseDetails.buttons.acceptCase')
-    }) }}
-    {{ govukButton({
-      text: t('pages.caseDetails.buttons.rejectCase'),
-      classes: "govuk-button--secondary"
-    }) }}
-    {{ govukButton({
-      text: t('pages.caseDetails.buttons.splitCase'),
-      classes: "govuk-button--secondary"
-    }) }}
-    {{ govukButton({
-      text: t('pages.caseDetails.buttons.leaveFeedback'),
-      classes: "govuk-button--secondary"
-    }) }}
-  {% elif currentStatus == "advising" %}
-    {{ govukButton({
-      text: t('pages.caseDetails.buttons.generateLegalHelpForm')
-    }) }}
-    {{ govukButton({
-      text: t('pages.caseDetails.buttons.rejectCase'),
-      classes: "govuk-button--secondary"
-    }) }}
-    {{ govukButton({
-      text: t('pages.caseDetails.buttons.splitCase'),
-      classes: "govuk-button--secondary"
-    }) }}
-    {{ govukButton({
-      text: t('pages.caseDetails.buttons.closeCase'),
-      classes: "govuk-button--secondary"
-    }) }}
-    {{ govukButton({
-      text: t('pages.caseDetails.buttons.leaveFeedback'),
-      classes: "govuk-button--secondary"
-    }) }}
-  {% elif currentStatus == "closed" %}
-    {{ govukButton({
-      text: t('pages.caseDetails.buttons.closeCase')
-    }) }}
-    {{ govukButton({
-      text: t('pages.caseDetails.buttons.leaveFeedback'),
-      classes: "govuk-button--secondary"
-    }) }}
-  {% elif currentStatus == "completed" %}
-    {{ govukButton({
-      text: t('pages.caseDetails.buttons.reopenCase')
-    }) }}
-    {{ govukButton({
-      text: t('pages.caseDetails.buttons.generateLegalHelpForm'),
-      classes: "govuk-button--secondary"
-    }) }}
+<div class="case-status-wrapper govuk-!-display-inline-block">
+  {{ govukTag({
+    text: statusConfig[currentStatus].text,
+    classes: statusConfig[currentStatus].classes}) 
+  }}
+
+  <span class="pipe"></span>
+
+  {% if not hideStatusButton%}
+    {{ mojButtonMenu({
+      id: "change-case-status-menu",
+      button: {
+        text: t('pages.caseDetails.buttons.label'),
+        classes: "govuk-button--secondary govuk-!-display-inline-block govuk-!-margin-bottom-2"
+      },
+      preventDoubleClick: true,
+      items: menuItems
+      })
+    }}
   {% endif %}
 </div>
+<hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible govuk-!-margin-bottom-6"/>
