If applied, this uses common text values

--- a/views/case_details/why-closed.njk
+++ b/views/case_details/why-closed.njk
@@ -33,12 +33,12 @@
           items: [
             {
               value: "MIS-OOS",
-              text: t('pages.caseDetails.closedCase.reasons.misOos'),
+              text: t('common.outcomeCode.MIS-OOS'),
               checked: currentEventCode == "MIS-OOS"
             },
             {
               value: "MIS",
-              text: t('pages.caseDetails.closedCase.reasons.mis'),
+              text: t('common.outcomeCode.MIS'),
               hint: {
                 text: t('pages.caseDetails.closedCase.reasons.misHint')
               },
@@ -46,12 +46,12 @@
             },
             {
               value: "MIS-MEANS",
-              text: t('pages.caseDetails.closedCase.reasons.misMeans'),
+              text: t('common.outcomeCode.MIS-MEANS'),
               checked: currentEventCode == "MIS-MEANS"
             },
             {
               value: "COI",
-              text: t('pages.caseDetails.closedCase.reasons.coi'),
+              text: t('common.outcomeCode.COI'),
               hint: {
                 text: t('pages.caseDetails.closedCase.reasons.coiHint')
               },
