--- a/views/case_details/edit-client-name.njk
+++ b/views/case_details/edit-client-name.njk
@@ -24,6 +24,7 @@
           },
           id: "fullName",
           name: "fullName",
+          autocomplete: "off",
           value: currentFullName,
           errorMessage: fullNameErrorMessage
         }) }}
