--- a/views/login/index.njk
+++ b/views/login/index.njk
@@ -23,6 +23,7 @@
         {{ govukInput({
           id: "username",
           name: "username",
+          autocomplete: "off",
           type: "text",
           classes: "govuk-!-width-one-third",
           label: {
