--- a/views/search/index.njk
+++ b/views/search/index.njk
@@ -39,6 +39,7 @@
       {{ govukInput({
       id: "searchKeyword",
       name: "searchKeyword",
+      autocomplete: "off",
       type: "text",
       classes: "govuk-!-width-two-thirds",
       value: searchKeyword,
