--- a/views/case_details/third_party_details/_form.njk
+++ b/views/case_details/third_party_details/_form.njk
@@ -32,6 +32,7 @@
     },
     id: "thirdPartyFullName",
     name: "thirdPartyFullName",
+    autocomplete: "off",
     value: currentThirdPartyFullName,
     errorMessage: errorMessages.thirdPartyFullName if error
   }) }}
@@ -79,6 +80,7 @@
     },
     id: "thirdPartyEmailAddress",
     name: "thirdPartyEmailAddress",
+    autocomplete: "off",
     spellcheck: false,
     value: currentThirdPartyEmailAddress,
     errorMessage: errorMessages.thirdPartyEmailAddress if error
@@ -103,6 +105,7 @@
     },
     id: "thirdPartyPostcode",
     name: "thirdPartyPostcode",
+    autocomplete: "off",
     classes: "govuk-input--width-10",
     value: currentThirdPartyPostcode,
     errorMessage: errorMessages.thirdPartyPostcode if error,
@@ -147,6 +150,7 @@
     {{ govukInput({
       id: "thirdPartyPassphrase",
       name: "thirdPartyPassphrase",
+      autocomplete: "off",
       value: currentThirdPartyPassphrase,
       spellcheck: false,
       classes: "govuk-!-width-one-half",
