If applied, this updates the client tab titles

--- a/views/case_details/index.njk
+++ b/views/case_details/index.njk
@@ -26,9 +26,9 @@
         partial: "case_details/_client-details-partial.njk"
       },
       {
-        id: "scope",
-        text: t('pages.caseDetails.tabs.scope'),
-        href: "/cases/" + caseReference + "/scope"
+        id: "case_details",
+        text: t('pages.caseDetails.tabs.caseDetails'),
+        href: "/cases/" + caseReference + "/case-details"
       },
       {
         id: "financial_eligibility",
@@ -36,9 +36,9 @@
         href: "/cases/" + caseReference + "/financial-eligibility"
       },
       {
-        id: "notes_and_history",
-        text: t('pages.caseDetails.tabs.notesAndHistory'),
-        href:"/cases/" + caseReference + "/notes-and-history"
+        id: "history",
+        text: t('pages.caseDetails.tabs.history'),
+        href:"/cases/" + caseReference + "/history"
       }
     ]
   }) }}
