--- a/views/search/index.njk
+++ b/views/search/index.njk
@@ -33,13 +33,12 @@
         <li>{{ t('pages.search.searchHint.items.address') }}</li>
       </ul>
     </div>
-    <form action="/search" method="POST" class="govuk-form">
+    <form action="/search" method="POST" class="govuk-form" autocomplete="off">
       <input type="hidden" name="_csrf" value="{{ csrfToken }}">
 
       {{ govukInput({
       id: "searchKeyword",
       name: "searchKeyword",
-      autocomplete: "off",
       type: "text",
       classes: "govuk-!-width-two-thirds",
       value: searchKeyword,
