--- a/views/case_details/edit-client-name.njk
+++ b/views/case_details/edit-client-name.njk
@@ -13,7 +13,7 @@
         {{ errorSummary(error.errorSummaryList) }}
         {% set fullNameErrorMessage = { text: error.inputErrors.fullName } if error.inputErrors.fullName %}
       {% endif %}
-      <form method="post" action="/cases/{{ caseReference }}/client-details/change/name">
+      <form method="post" action="/cases/{{ caseReference }}/client-details/change/name" autocomplete="off">
         <input type="hidden" name="_csrf" value="{{ csrfToken }}">
         <input type="hidden" name="existingFullName" value="{{ existingFullName }}">
         {{ govukInput({
@@ -24,7 +24,6 @@
           },
           id: "fullName",
           name: "fullName",
-          autocomplete: "off",
           value: currentFullName,
           errorMessage: fullNameErrorMessage
         }) }}
