--- a/views/case_details/index.njk
+++ b/views/case_details/index.njk
@@ -19,6 +19,7 @@
     containerId: "cases-tab-container",
     data: client,
     history: history,
+    timelineItems: timelineItems,
     pagination: pagination,
     tabs: [
       {
