--- a/views/components/tabComponent.njk
+++ b/views/components/tabComponent.njk
@@ -90,6 +90,7 @@
           {# Set context variables for the partial #}
           {% set data = options.data %}
           {% set history = options.history %} 
+          {% set timelineItems = options.timelineItems %}
           {% set sortOrder = options.sortOrder %}
           {% set pagination = options.pagination %}
           {% set caseType = options.caseType %} 
